# glibc

./: .gitignore  Makeconfig  Makerules  README.md  abi-tags  config.h.in  configure  configure.ac
sysdeps/unix/sysv/zos/: Implies  Makefile  Versions  _G_config.h  accept.c  adjtime.c  aio_misc.h  alarm.c  arch-fork.h  chattr.c  chdir.c  check_fds.c  chmod.c  chown.c  clock_getres.c  clock_gettime.c  closedir.c  configure  configure.ac  connect.c  device-nrs.h  dirstream.h  dl-execstack.c  dl-openat64.c  dl-osinfo.h  dl-sysdep.h  dup2.c  dup3.c  epoll_wait.c  errlist.c  execve.c  faccessat.c  fchattr.c  fchdir.c  fchmod.c  fchmodat.c  fchown.c  fchownat.c  fcntl_nocancel.c  fdopendir.c  (+129 more)
sysdeps/unix/sysv/zos/bits/: bpxystat.h  dirent.h  errno.h  fcntl-linux.h  in.h  ioctl-types.h  ioctls.h  local_lim.h  param.h  resource.h  siginfo-consts.h  signum.h  sockaddr.h  socket_type.h  stat.h  sys_errlist.h  sysmacros.h  termios.h  time.h  typesizes.h  uio_lim.h  utsname.h  waitflags.h
sysdeps/unix/sysv/zos/include/: at-call.h  bpxk-constants.h  io.h  unimplemented.h  zos-chattr.h  zos-getpw.h  zos-mmap.h
sysdeps/unix/sysv/zos/linux/: falloc.h
sysdeps/unix/sysv/zos/s390/: Implies  brk.c  kernel-features.h  mmap_internal.h  opensock.c  readelflib.c  sysconf.c  system.c
sysdeps/unix/sysv/zos/s390/bits/: fcntl.h  stat.h
sysdeps/unix/sysv/zos/s390/s390-64/: Implies  ___longjmp_chk.c  __longjmp.c  brk.c  bzero.S  clone.c  crti.S  crtn.S  csu-loadhfs.c  csu-syscall-wrapper.S  dl-machine.h  dl-procinfo.h  dl-support.c  dl-sysdep.c  estaex.c  (+50 more)
sysdeps/unix/sysv/zos/sys/: wait.h
(+93 files in other folders)
