GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.
# Local configure fragment for sysdeps/unix/sysv/zos.

dnl Binary files should be treated differently from regular text files.
AC_DEFINE(HAVE_SIGNIFICANT_BINARY_FILES)

dnl Our ELF header is not at the start of the file.
AC_DEFINE(EHDR_IS_NOT_FILE_START)
